Update service to handle abstract OpenID provider
