# auth-service/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  authAPI.yaml
-#   timestamp: 2020-11-02T07:09:32+00:00
+#   timestamp: 2021-02-07T13:01:36+00:00
 
 from __future__ import annotations
 
@@ -9,13 +9,6 @@ from enum import Enum
 from typing import List, Optional
 
 from pydantic import BaseModel
-
-
-class LoginCredentials(BaseModel):
-    code: Optional[str] = None
-    code_verifier: Optional[str] = Field(None, alias='codeVerifier')
-    nonce: Optional[str] = None
-    redirect_uri: Optional[str] = Field(None, alias='redirectUri')
 
 
 class TokenResponse(BaseModel):
